solves flickering in search results modal

--- a/styles/compass-src/src/helpers/_vars.scss
+++ b/styles/compass-src/src/helpers/_vars.scss
@@ -1,6 +1,7 @@
 //colors
 $firm-color: #58585A;
 $attention-color: #c9302c; //same with danger
+$link-color: #337ab7; //default bootstrap
 
 
 //fonts
