--- a/styles/compass-src/src/partials/_home.scss
+++ b/styles/compass-src/src/partials/_home.scss
@@ -59,6 +59,10 @@
 	}
 }
 
+#waitingSearchLoad {
+  position: absolute;
+}
+
 table#searchResults {
   border: none;
 }
